@@ -8,6 +8,7 @@ The format is based on [[http://keepachangelog.com][Keep a Changelog]] and this 
 ** [[https://github.com/sergeyklay/bnf-mode/compare/0.3.1...HEAD][Unreleased]]
 *** Fixed
 - Original BNF has no strings so treat ~'~ and ~"~ as a symbols
+- Minor code cleanup: removed no longer needed ~comment-*~ variables
 
 ** [[https://github.com/sergeyklay/bnf-mode/compare/0.3.0...0.3.1][0.3.1]] - 2019-03-17
 *** Fixed
